feat: add implementation for registry smart contract

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "contracts",
   "contracts/patient-registry",
   "contracts/hospital-registry",
+  "contracts/insurer-registry",
 ]
 
 [workspace.dependencies]
