feat: add medical device tracking and implant registry contract (#53)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ members = [
   "contracts/rehabilitation-services",
   "contracts/prenatal-pediatric",
   "contracts/hai-tracking",
+  "contracts/medical-device-tracking",
 ]
 
 [workspace.dependencies]
